# EXACT-mppi

./: .dockerignore  .dockerignore.bak  Docker_guide.md  README.md  Readme.md  docker.md
EXACT_MPPI_core/: .gitignore  pyproject.toml
EXACT_MPPI_core/exact_mppi/path/: path_search.py  reference_path.py
EXACT_MPPI_core/example/corridor_dynamic_random_jax/: mppi_jax_test.py
EXACT_MPPI_core/example/corridor_jax_cluttered/: env.yaml  mppi_jax_test.py
EXACT_MPPI_core/example/narrow_gaps_jax/: mppi_jax_test.py
docker/: Dockerfile.humble-cuda
ir-sim_mppi/: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ir-sim_mppi/docs/locale/zh_CN/LC_MESSAGES/: index.po
ir-sim_mppi/docs/locale/zh_CN/LC_MESSAGES/api/: index.po
ir-sim_mppi/docs/locale/zh_CN/LC_MESSAGES/get_started/: index.po  (+2 more)
ir-sim_mppi/docs/source/: conf.py  index.rst
ir-sim_mppi/docs/source/get_started/: install.rst
ir-sim_mppi/docs/source/usage/: configure_robots_obstacles.md
ir-sim_mppi/docs/source/yaml_config/: configuration.md
ir-sim_mppi/irsim/lib/algorithm/: generation.py  kinematics.py  rvo.py
ir-sim_mppi/irsim/lib/path_planners/: a_star.py  probabilistic_road_map.py  rrt.py  rrt_star.py
ir-sim_mppi/irsim/world/map/binary_map_generator_hm3d/: binary_map_generator.py
mosaic_mppi_ros2/: README.md  setup.sh
mosaic_mppi_ros2/src/ddr_minimal_sim/: README.md  package.xml
mosaic_mppi_ros2/src/ddr_minimal_sim/config/maps/: map_from_irsim.yaml  maze_simple.yaml  narrow_passage.yaml  polygon_random.yaml  u_trap.yaml
mosaic_mppi_ros2/src/ddr_minimal_sim/src/: environment_node.cpp  laser_simulator_node.cpp  scenario_library.cpp  simulator_node.cpp
mosaic_mppi_ros2/src/exact_mppi_jax/: package.xml  setup.py
mosaic_mppi_ros2/src/exact_mppi_jax/config/mppi_config/: limo_corridor_planner.yaml
mosaic_mppi_ros2/src/exact_mppi_jax/exact_mppi_jax/: corridor_goal_trigger.py  corridor_pedestrian_scene.py  gazebo_dynamic_obstacles.py  start_obstacles_on_goal.py
mosaic_mppi_ros2/src/exact_mppi_jax/launch/: sim_limo_corridor_launch.py
mosaic_mppi_ros2/src/exact_mppi_jax/models/pedestrian_obstacle/: model.config  model.sdf
mosaic_mppi_ros2/src/exact_mppi_jax/models/pedestrian_obstacle/materials/scripts/: rescue_randy.material
mosaic_mppi_ros2/src/exact_mppi_jax/models/pedestrian_obstacle/meshes/: rescue_randy.dae
mosaic_mppi_ros2/src/exact_mppi_jax/rviz/: sim_limo_corridor.rviz
mosaic_mppi_ros2/src/exact_mppi_jax/worlds/: mosaic_dynamic_pedestrians.world  mppi_corridor_dynamic.world  neupan_corridor_crosses.world
mosaic_mppi_ros2/src/limo_description/: package.xml
mosaic_mppi_ros2/src/limo_description/launch/: gazebo_models_diff.launch.py
mosaic_mppi_ros2/src/limo_description/urdf/: limo_four_diff.gazebo  limo_four_diff.xacro
(+11 files in other folders)
